Bluewolf SFMTA/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>14 Mission Rapid Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16th Street Multimodal Corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009 San Francisco Bicycle Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22 Fillmore Transit Priority Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28/28R 19th Ave and 43 Masonic Route Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28R 19th Ave Rapid Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29 Sunset Route Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Stockton Transit Priority Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 Eureka Service Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>44 and 48 Owl Routes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Fulton Rapid Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6th Street Improvement Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Haight Noriega Rapid Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7th Street and 8th Street Safety Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8th Avenue Neighborway Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9R San Bruno Rapid Service Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 San Bruno Rapid Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alamo Elementary School Safe Routes to School Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Giannini Middle and Sunset Elementary Safe Routes to School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arguello Boulevard Safety Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa Park Station Area &amp; Plaza Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa Park Station Area Upkeep and Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bayshore Boulevard Road Diet and Bikeways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bay Street Road Diet and Cycletrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Market Street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bike Parking Project in SFMTA Garages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bike Share Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryant Street Bike Network Improvement Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buena Vista Elementary School Safe Routes School Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candlestick Point/Hunters Point Shipyard</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Protest_Reason__c</fullName>
        <description>Field where the constituent provides information as to why they are protesting the tow.</description>
        <label>Explain why you are protesting the tow.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Providing_food__c</fullName>
        <label>Will you be providing food?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Various Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Trucks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Public_Hearing_Date__c</fullName>
        <label>Public Hearing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Closure__c</fullName>
        <label>Purpose of Closure</label>
        <picklist>
            <picklistValues>
                <fullName>Public Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Community Street Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Block Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Block Closure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Zone__c</fullName>
        <label>Purpose of Zone</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Tow__c</fullName>
        <label>Reason for Tow</label>
        <picklist>
            <picklistValues>
                <fullName>VC 22500E - Blocking Driveway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.40/41 - Prohibited Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.45 - Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.26 - Yellow Zone – Commercial Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.46 - Construction Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.83 - 6-Wheel Truck Loading Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.29 - Over 72 Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.44A - Placard Misuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC 22651(I) - Scofflaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC 22651(O) - Out of Regis.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.25 - Red Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.27 - White Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC 22651(J) - No ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC 22651(b) - Hazard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VC 22669(d) - Vehicle Missing Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TC 7.2.38 - Taxi Stand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <label>Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Point__c</fullName>
        <label>Reference Point</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <description>Date Referred</description>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>because this is not a legitimate driveway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of parking removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of an extra wide driveway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because this is a residential area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because the location doesn&apos;t meet ADA requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of off street parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>because of other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Other__c</fullName>
        <label>Relationship Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Business__c</fullName>
        <label>Relationship to Business</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visitor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <description>Placeholder field for bike rack request details from Lagan to be stored in a Bike Parking Salesforce case.</description>
        <label>Request Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSP__c</fullName>
        <label>SSP # (If applicable)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Admin_Penalty_Description__c</fullName>
        <label>Admin Penalty Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STL_Appeal__c</fullName>
        <inlineHelpText>If appealed, need to attach supporting documentation.</inlineHelpText>
        <label>Appeal?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Badge_Number__c</fullName>
        <label>Badge #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Block_Location__c</fullName>
        <label>Block Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Collision_Date__c</fullName>
        <label>Collision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STL_Collision_Location__c</fullName>
        <label>Collision Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Collision_Report_Attachments__c</fullName>
        <formula>&quot;Please upload and attach any photos, documentation, or police report for review.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collision Report Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Collision_Time__c</fullName>
        <label>Collision Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Complaint_Category__c</fullName>
        <label>Complaint Category</label>
        <picklist>
            <picklistValues>
                <fullName>Blocking bike lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocking crosswalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocking Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocking travel lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idling/Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shuttles disruptive/loud/unwelcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stops removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorized stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unauthorized street</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpermitted shuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsafe driving</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Complaint_Status_Outcome__c</fullName>
        <label>Complaint Status/Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STL_Date_of_Occurrence__c</fullName>
        <label>Date of Occurrence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STL_Detour_Date__c</fullName>
        <label>Detour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STL_Detour_Reason__c</fullName>
        <label>Detour Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Construction Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Detour_Time__c</fullName>
        <label>Detour Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Email_Optional__c</fullName>
        <description>Email of individual submitting a complaint against a shuttle that is a part of the &quot;Commuter Shuttle Program&quot;</description>
        <label>Email (Optional)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>STL_Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>STL_Issue_Time__c</fullName>
        <label>Issue Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_LP_Number__c</fullName>
        <inlineHelpText>Vehicle License Plate Number</inlineHelpText>
        <label>LP#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Location_Nearest_Intersection__c</fullName>
        <label>Location (Nearest Intersection)</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Name_Optional__c</fullName>
        <description>Name of individual submitting a complaint against a shuttle that is a part of the &quot;Commuter Shuttle Program&quot;</description>
        <label>Name (Optional)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Neighborhood__c</fullName>
        <label>Neighborhood</label>
        <picklist>
            <picklistValues>
                <fullName>Noe Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoPa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cow Hollow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outer Sunset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haight-Ashbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoMa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cathedral Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glen Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Heights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potrero Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dogpatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Sunset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hayes Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freeway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nob Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duboce Triangle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twin Peaks</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Number_of_Stickers__c</fullName>
        <label>Number of Stickers</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_PL_Number__c</fullName>
        <inlineHelpText>Sticker/Placard Number</inlineHelpText>
        <label>PL#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Penalty_Appeal_Guidelines__c</fullName>
        <description>Guidelines for community users on how to appeal &quot;Administrative Penalties&quot; in the community portal.</description>
        <formula>&quot;If you would like to appeal this penalty, please select the &apos;edit&apos; button in the top right hand corner. Change the &apos;Appeal?&apos; box to &apos;yes&apos;, provide a summary in the &apos;Description&apos; section, and attach any supporting documentation&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penalty Appeal Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Phone_Optional__c</fullName>
        <description>Phone number of individual submitting a complaint against a shuttle that is a part of the &quot;Commuter Shuttle Program&quot;</description>
        <label>Phone (Optional)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>STL_Restriction__c</fullName>
        <label>Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Arterial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 3 Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 8 Passengers</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>STL_Shuttle_Vehicle_Permit_Number__c</fullName>
        <label>Shuttle Vehicle Permit Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Sticker_Replacement_Attachments__c</fullName>
        <formula>&quot;Please upload and attach photos of your damaged/faded sticker for review.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sticker Replacement Attachments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Suspend_Code__c</fullName>
        <label>Suspend Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STL_Suspend_Desc__c</fullName>
        <label>Suspend Desc</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Tick_Address__c</fullName>
        <label>Tick Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STL_Tick_Amt_Due__c</fullName>
        <label>Tick Amt Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STL_Tick_Fine_Amt__c</fullName>
        <label>Tick Fine Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STL_Tick_Rp_Plate_State__c</fullName>
        <label>Tick Rp Plate State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Tick_Rp_Plate__c</fullName>
        <label>Tick Rp Plate</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Ticket_Number__c</fullName>
        <externalId>true</externalId>
        <label>Ticket Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Violation_Amount__c</fullName>
        <label>Violation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STL_Violation_Desc__c</fullName>
        <label>Violation Desc</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Violation_Timestamp_End__c</fullName>
        <label>Violation Timestamp End</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Violation_Timestamp_Start__c</fullName>
        <label>Violation Timestamp Start</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Violation_Type_Desc__c</fullName>
        <label>Violation Type Desc</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STL_Violation__c</fullName>
        <externalId>true</externalId>
        <label>Violation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serving_Alcohol__c</fullName>
        <label>Serving Alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distilled Spirits</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sidewalk_and_street_curb_to_curb_width__c</fullName>
        <inlineHelpText>ON THE DRAWING(S), ARE THE FOLLOWING SHOWN?</inlineHelpText>
        <label>Sidewalk and street (curb to curb) width</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Shop_Specs__c</fullName>
        <label>Sign Shop Specs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Plan__c</fullName>
        <label>Site Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <inlineHelpText>Please enter just the number of the street address for the requested location. Not a mailing address.</inlineHelpText>
        <label>Street Address Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Fair__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Fair</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <inlineHelpText>Please enter the Street Name for the requested location. This is not a mailing address.</inlineHelpText>
        <label>Street Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Surface__c</fullName>
        <label>Street Surface</label>
        <picklist>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Division__c</fullName>
        <label>Sub-Division</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Secretary to the Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEO Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Quality Assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Order Contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting &amp; Operating Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Hearings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Finance &amp; Budgeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Collection &amp; Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee &amp; Labor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Operations &amp; Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Development &amp; Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Instruction Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workers’ Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livable Streets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>